--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5 col-12">
-                        <div class="d-flex justify-content-evenly">
-                            <p class="footer_nav">Home</p>
-                            <p class="footer_nav">About Us</p>
-                            <p class="footer_nav">Products</p>
-                            <p class="footer_nav">Contact Us</p>
-                        </div>
+                       <div class="d-flex justify-content-evenly">
+              <a href="#carousal" > <p class="footer_nav1">Home</p></a>
+               <a href="#product" ><p class="footer_nav1">Products</p></a>
+              <a href="#about" ><p class="footer_nav1">About Us</p></a>
+              <a href="#contact" ><p class="footer_nav1">Contact Us</p></a>
+          </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-12">
                         <div class="d-flex justify-content-center">
