--- a/index.html
+++ b/index.html
@@ -338,22 +338,22 @@
                             <p class="footer_nav">Follow Us: </p>
                             <div class="d-flex justify-content-evenly flex-fill follow_us_maindiv">
                                 <div>
-                    <a href="https://www.facebook.com/XyugTechnologies" class="text"><img src="assets/images/Facebook.png" alt="facebook" class="footer_followus"></a>
+                    <a href="https://www.facebook.com/XyugTechnologies" class="text"><img src="assets/Facebook.png" alt="facebook" class="footer_followus"></a>
                   </div>
                   <div> 
-                    <a href="https://www.instagram.com/xyugofficial/" class="text"><img src="assets/images/Insta.png" alt="insta" class="footer_followus"></a>
+                    <a href="https://www.instagram.com/xyugofficial/" class="text"><img src="assets/Insta.png" alt="insta" class="footer_followus"></a>
                   </div>
                   <div>
-                    <a href="https://x.com/i/flow/login?redirect_after_login=%2Fxyugtech" class="text"><img src="assets/images/Twitter.png" alt="twitter" class="footer_followus"></a>
+                    <a href="https://x.com/i/flow/login?redirect_after_login=%2Fxyugtech" class="text"><img src="assets/Twitter.png" alt="twitter" class="footer_followus"></a>
                   </div>
                   <div> 
-                    <a href="https://www.youtube.com/@matrika_goldsikka" class="text"><img src="assets/images/Youtube.png" alt="youtube" class="footer_followus"></a>
+                    <a href="https://www.youtube.com/@matrika_goldsikka" class="text"><img src="assets/Youtube.png" alt="youtube" class="footer_followus"></a>
                   </div>
                   <div> 
-                    <a href="https://www.linkedin.com/company/x-yug-technologies-pvt-ltd/mycompany/" class="text"><img src="assets/images/Linkedin.png" alt="linkedin" class="footer_followus"></a>
+                    <a href="https://www.linkedin.com/company/x-yug-technologies-pvt-ltd/mycompany/" class="text"><img src="assets/Linkedin.png" alt="linkedin" class="footer_followus"></a>
                   </div>
                   <div>
-                    <a href="https://in.pinterest.com/Matrika_goldsikka/" class="text"><img src="assets/images/Pin.png" alt="pet" class="footer_followus"></a>
+                    <a href="https://in.pinterest.com/Matrika_goldsikka/" class="text"><img src="assets/Pin.png" alt="pet" class="footer_followus"></a>
                   </div>
                             </div>
                         </div>
