--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                        <div class="d-flex justify-content-evenly">
               <a href="#carousel" > <p class="footer_nav">Home</p></a>
                <a href="#about" ><p class="footer_nav">About Us</p></a>
-               <a href="#product" ><p class="footer_nav">Products</p></a>
+               <a href="#products" ><p class="footer_nav">Products</p></a>
               <a href="#contact" ><p class="footer_nav">Contact Us</p></a>
           </div>
                     </div>
