--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                     </div>
                     <div class="col-md-6 col-lg-5 col-12">
                        <div class="d-flex justify-content-evenly">
-              <a href="#carousel" > <p class="footer_nav">Home</p></a>
-               <a href="#about" ><p class="footer_nav">About Us</p></a>
-               <a href="#products" ><p class="footer_nav">Products</p></a>
-              <a href="#contact" ><p class="footer_nav">Contact Us</p></a>
+              <a href="#carousel" > <p class="footer_nav text">Home</p></a>
+               <a href="#about" ><p class="footer_nav text">About Us</p></a>
+               <a href="#products" ><p class="footer_nav text">Products</p></a>
+              <a href="#contact" ><p class="footer_nav text">Contact Us</p></a>
           </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-12">
