--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
         <div class="row">
 
             <div class="col-lg-3">
-                <img src="assets/Vector.png" class="image">
-                <p id="num">+91 7645486421</p>
+                <a href="tel:7645486421" class="text"><img src="assets/Vector.png" class="image">
+                <p id="num">+91 7645486421</p></a>
                 <P id="para1">Support team will be available from
                     9:00 AM till 7:00 PM</P>
                 <p id="para2">Connect with our delight team over
@@ -291,22 +291,22 @@
             </div>
 
             <div class="col-lg-3">
-                <img src="assets/envelope (1).png" class="image">
-                <p id="num">novia@gmail.com</p>
+                <a href="mailto:novia@gmail.com" class="text"><img src="assets/envelope (1).png" class="image">
+                <p id="num">novia@gmail.com</p></a>
                 <p id="para2">Your question or feedback are always
                     welcome at bluejewellery.com</p>
             </div>
 
             <div class="col-lg-3">
-                <img src="assets/whatsapp.png" class="image">
-                <p id="num">Whatsapp Us</p>
+                <a href="https://api.whatsapp.com/send?phone=7645486421" class="text"><img src="assets/whatsapp.png" class="image">
+                <p id="num">Whatsapp Us</p></a>
                 <p id="para2">Our 24x7 shopping assistant is a text
                     away</p>
             </div>
 
             <div class="col-lg-3">
-                <img src="assets/marker.png" class="image">
-                <p id="num">Address</p>
+                <a class="text" href="https://www.google.com/maps/place/Goldsikka+Limited/@17.3930762,78.4556596,13z/data=!3m1!5s0x3bcb90a30e24e711:0x20e8aeadcb03c36b!4m10!1m2!2m1!1sGoldsikka+Limited+2nd+Floor,+H.No.1-10-60+to+62,+Ashoka+Raghupathi+Chambers+,+S.P.+Road,+Begumpet+Hyderabad,+Telangana-500016,+India.!3m6!1s0x3bcb90a36223132b:0x56f6b02c055805b6!8m2!3d17.4443856!4d78.4656404!15sCoUBR29sZHNpa2thIExpbWl0ZWQgMm5kIEZsb29yLCBILk5vLjEtMTAtNjAgdG8gNjIsIEFzaG9rYSBSYWdodXBhdGhpIENoYW1iZXJzICwgUy5QLiBSb2FkLCBCZWd1bXBldCBIeWRlcmFiYWQsIFRlbGFuZ2FuYS01MDAwMTYsIEluZGlhLpIBC2dvbGRfZGVhbGVy4AEA!16s%2Fg%2F11thqxd3wq?entry=ttu"><img src="assets/marker.png" class="image">
+                <p id="num">Address</p></a>
                 <p id="para2">01-502, Om Shakti Samrat CHS Ltd., Plot No. 21, Shakti Nivas, , Malad West, Mumbai 400064, India.</p>
             </div>
         </div>
